done with the second task partialy

--- a/Task1.ipynb
+++ b/Task1.ipynb
@@ -756,40 +756,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 295,
    "id": "b1acecf4-328e-4423-ab06-09241bad34bf",
    "metadata": {},
    "outputs": [],
    "source": [
     "def entrance_number(k1, M, k2, p2, n2):\n",
-    "    if k1 == k2:\n",
-    "        return p2, n2\n",
-    "    if M <= k2 and p2 > 1:\n",
-    "        return -1, -1\n",
-    "    if k1 < k2 and p2 == 1:\n",
-    "        p1 = 1\n",
-    "        if math.ceil(k2/((p2-1)*M + n2)) * ((p2-1)*M + n2) > k2 and (math.ceil(k2/((p2-1)*M + n2))+1) * ((p2-1)*M + n2) > k2:\n",
-    "            return p1, 0\n",
-    "        n1 = (k1 - (p1 - 1)*M*g) // g + (k1 - (p1 - 1)*M*g) % g\n",
-    "        return p1, n1\n",
-    "        \n",
-    "    if M == 1:\n",
-    "        n1 = 1\n",
-    "        if p2 == 1 and n1 == 1:\n",
-    "            return 0, n1\n",
+    "    if k1 == 1:\n",
+    "        print(1, 1)\n",
+    "    elif n2 > M:\n",
+    "        print(-1, -1)\n",
+    "    elif n2 < M and p2 > 1:\n",
+    "        print(-1, -1)\n",
+    "    elif M == 1:\n",
+    "        print(0, 1)\n",
+    "    else:\n",
+    "        g = math.ceil(k2/((p2-1)*M + n2))\n",
+    "        p1 = math.ceil(k1 / (M * g))\n",
+    "        # if (k2 - (p1 - 1)*M*g) % g > 1:\n",
+    "        if k2%g > 1:\n",
+    "            print(p1, 0)\n",
     "        else:\n",
-    "            g = math.ceil(k2/((p2-1)*M + n2))\n",
-    "            p1 = math.ceil(k1 / (M * g))\n",
-    "            return p1, n1\n",
-    "    g = math.ceil(k2/((p2-1)*M + n2))\n",
-    "    p1 = math.ceil(k1 / (M * g))\n",
-    "    n1 = (k1 - (p1 - 1)*M*g) // g + (k1 - (p1 - 1)*M*g) % g\n",
-    "    return p1, n1"
+    "            n1 = (k1 - (p1 - 1)*M*g) // g + (k1 - (p1 - 1)*M*g) % g\n",
+    "            print(p1, n1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 296,
    "id": "27d46186-63b8-454d-8e06-bfe22e59c0c2",
    "metadata": {},
    "outputs": [
@@ -797,18 +791,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2, 3)\n",
-      "(0, 1)\n",
-      "(-1, -1)\n",
-      "(1, 0)\n"
+      "2 3\n",
+      "0 1\n",
+      "-1 -1\n",
+      "1 0\n"
      ]
     }
    ],
    "source": [
-    "print(entrance_number(89, 20, 41, 1, 11))\n",
-    "print(entrance_number(11, 1, 1, 1, 1))\n",
-    "print(entrance_number(3, 2, 2, 2, 1))\n",
-    "print(entrance_number(4, 2, 5, 1, 2))  # 1 0"
+    "entrance_number(89, 20, 41, 1, 11)\n",
+    "entrance_number(11, 1, 1, 1, 1)\n",
+    "entrance_number(3, 2, 2, 2, 1)\n",
+    "entrance_number(4, 2, 5, 1, 2) # 1 0"
    ]
   },
   {
@@ -1374,9 +1368,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "57fba577-a9be-4e6b-be97-a3d4df54933e",
+   "metadata": {},
+   "source": [
+    "# Laptops"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d63ecbae-8f1a-406f-aa5f-e8d3c39ef458",
+   "id": "54cd9f16-35f8-4484-a7de-40cc63ed421e",
    "metadata": {},
    "outputs": [],
    "source": []
