made task with stones dynamicaly

--- a/Task2.ipynb
+++ b/Task2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 165,
    "id": "b91ab4e2-6421-4b53-9e90-10e4e868bdf9",
    "metadata": {},
    "outputs": [],
@@ -42,12 +42,19 @@
     "            if time_slots[i][0] >= time_slots[0][-1]:\n",
     "                _slots.append(time_slots[i])\n",
     "        time_slots = _slots\n",
+    "\n",
+    "    output = ' '*schedule[0][0]\n",
+    "    for idx, slot in enumerate(schedule):\n",
+    "        if idx >=1:\n",
+    "            output += ' '*(slot[0] - schedule[idx-1][-1])\n",
+    "        output += '#' + '-'*(slot[-1] - slot[0]) + '#'\n",
+    "    print(output)\n",
     "    return schedule"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 144,
    "id": "66111367-65af-47bf-8c31-0c9a38a45cc1",
    "metadata": {},
    "outputs": [],
@@ -67,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 196,
    "id": "e5642d04-63af-4a13-83fd-88878ed9bd13",
    "metadata": {},
    "outputs": [],
@@ -101,12 +108,21 @@
     "        assert schedules_are_equal([[0, 6]], slots)\n",
     "        print('test passed')\n",
     "    except Exception:\n",
+    "        print('test not passed')\n",
+    "\n",
+    "def test4(func):\n",
+    "    time_slots = [[1, 3], [4, 5], [1, 5]]\n",
+    "    slots = func(time_slots)\n",
+    "    try:\n",
+    "        assert schedules_are_equal([[1, 5]], slots)\n",
+    "        print('test passed')\n",
+    "    except Exception:\n",
     "        print('test not passed')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 197,
    "id": "f2b489fe-a9af-4e19-b784-fb197b2435d6",
    "metadata": {},
    "outputs": [],
@@ -120,7 +136,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 198,
+   "id": "f09a446f-93f9-429f-87fa-b100f3fb2ebb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " #--# #-#\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 3], [4, 5]]"
+      ]
+     },
+     "execution_count": 198,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time_slots = [[1, 3], [4, 5], [1, 5]]\n",
+    "make_schedule(time_slots)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
    "id": "ac7fba3f-8b3d-425e-bd42-4c6efce45fd1",
    "metadata": {},
    "outputs": [
@@ -128,16 +173,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "#----#   #-# #---#\n",
       "test passed\n",
+      "#-##-# #-##--#\n",
       "test passed\n",
-      "test passed\n"
+      "#------#\n",
+      "test passed\n",
+      " #--# #-#\n",
+      "Arrays' lenghts differ:\n",
+      "test not passed\n"
      ]
     }
    ],
    "source": [
     "test1(make_schedule)\n",
     "test2(make_schedule)\n",
-    "test3(make_schedule)"
+    "test3(make_schedule)\n",
+    "test4(make_schedule)"
    ]
   },
   {
@@ -153,7 +205,7 @@
    "id": "08a4ba24-6dc0-4c8a-88f0-598d7e811cb2",
    "metadata": {},
    "source": [
-    "Ханойские башни. Нужно рекурсивное решение "
+    "Ханойские башни. Нужно рекурсивное решение - сложность 2^n − 1"
    ]
   },
   {
@@ -598,6 +650,57 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c25806e-b1d7-4f53-9328-98d1d81f532c",
+   "metadata": {},
+   "source": [
+    "## Усеченный случай"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "6ddad9e8-e821-4bf5-af78-7e9efa1c230e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# построим плоскость\n",
+    "def plain(a, b, c, d, x, y, z):\n",
+    "    return a*x + b*y + c*z + d\n",
+    "\n",
+    "def drop_points_in_plane(N: int, M: int, A:int, B:int, C: int, D:int, rule='greater') -> None:\n",
+    "    _x = np.random.uniform(-1, 1, (N, 3))\n",
+    "    _distances = (_x**2).sum(axis=1)\n",
+    "    _in_plain = np.array(list(map(lambda _point: plain(A, B, C, D, _point[0], _point[1], _point[2]), _x)))\n",
+    "    if rule=='greater':\n",
+    "        ration = np.where((_distances <= 1) & (_in_plain >= 0), 1, 0).sum() / np.where(_in_plain >= 0, 1, 0).sum()\n",
+    "    if rule == 'less':\n",
+    "        ration = np.where((_distances <= 1) & (_in_plain <= 0), 1, 0).sum() / np.where(_in_plain <= 0, 1, 0).sum()\n",
+    "    return ration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "e36dc300-5d52-4238-b54e-6ab0a5d8a93d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.49"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drop_points_in_plane(100, 10, -1, -1, 1, -2, 'less')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bc522953-6523-4d8c-84e6-7e2ae235b165",
    "metadata": {},
    "source": [
@@ -614,15 +717,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "id": "a37b6220-063c-40b2-be4d-8902243ec27f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def stones(n, m):\n",
-    "    pass\n",
-    "\n"
+    "def stones(n, m, start=True):\n",
+    "    if n+m == 1 or n+m==2:\n",
+    "        print('You Won')\n",
+    "        return 1\n",
+    "    if n+m > 4:\n",
+    "        # взять 1 из первой кучи\n",
+    "        if start:\n",
+    "            res = stones(n-1, m, False)\n",
+    "            if res == 1:\n",
+    "                return 1\n",
+    "        else:\n",
+    "            res = stones(n-2, m, False)\n",
+    "            if res != 1:\n",
+    "                res = stones(n-1, m-1, False)\n",
+    "            if res != 1:\n",
+    "                res = stones(n-2, m-1, False)\n",
+    "            if res == 1:\n",
+    "                return 1\n",
+    "            else:\n",
+    "            \n",
+    "                # взять 1 из второй кучи\n",
+    "                if start:\n",
+    "                    res = stones(n, m-1, False)\n",
+    "                    if res == 1:\n",
+    "                        return 1\n",
+    "                else:\n",
+    "                    res = stones(n, m-2, False)\n",
+    "                    if res != 1:\n",
+    "                        res = stones(n-1, m-1, False)\n",
+    "                    if res != 1:\n",
+    "                        res = stones(n-1, m-2, False)\n",
+    "                    if res == 1:\n",
+    "                        return 1\n",
+    "                    else:\n",
+    "                        # взять по 1 из каждой\n",
+    "                        if start:\n",
+    "                            res = stones(n-1, m-1, False)\n",
+    "                            if res == 1:\n",
+    "                                return 1\n",
+    "                        else:\n",
+    "                            res = stones(n-1, m-2, False)\n",
+    "                            if res != 1:\n",
+    "                                res = stones(n-2, m-1, False)\n",
+    "                            if res != 1:\n",
+    "                                res = stones(n-2, m-2, False)\n",
+    "                            if res == 1:\n",
+    "                                return 1\n",
+    "                            else:\n",
+    "                                return 0\n",
+    "    else:\n",
+    "        print('You loose')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "id": "71f7fca1-493b-4be7-acaa-d8d54a7ccdb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You Won\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stones(3, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2dc9429c-ffac-4686-87c5-123f123aacff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
