implemented max product

--- a/Task3.ipynb
+++ b/Task3.ipynb
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,8 @@
       "object: 2, priority: 3\n",
       "object: 13, priority: 3\n",
       "object: name, priority: 4\n",
-      "\n"
+      "\n",
+      "0\n"
      ]
     }
    ],
@@ -260,8 +261,8 @@
     "print(queue)\n",
     "queue.dequeue()\n",
     "print(queue)\n",
-    "# queue.empty()\n",
-    "# print(queue.size())"
+    "queue.empty()\n",
+    "print(queue.size())"
    ]
   },
   {
@@ -288,66 +289,106 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 98,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2, 12)"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "s = {12, 2}\n",
-    "s.pop(), s.pop()"
+    "# Максимальное произведение"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 159,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2]"
-      ]
-     },
-     "execution_count": 85,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "list({1: 1, 2:2}.keys())"
+    "def find_max_product(sequence: 'list[int]') -> 'list[int]':\n",
+    "    products = []\n",
+    "    for i in range(len(sequence) - 1):\n",
+    "        products.append([sequence[i]*sequence[i+1], [sequence[i], sequence[i+1]]])\n",
+    "    products.sort(reverse=True, key=lambda x: x[0])\n",
+    "    max_product = products[0] # max(products)\n",
+    "    nums = []\n",
+    "    for idx, product in enumerate(products):\n",
+    "        if product[0] == max_product:\n",
+    "            # counter += 1\n",
+    "            nums.append(products[i][-1][0], idx)\n",
+    "            nums.append(products[i][-1][1], idx)\n",
+    "        else:\n",
+    "            break\n",
+    "    nums.sort(key=lambda x: x[0])\n",
+    "    return products[0][-1]\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "[6, 2]"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "l = [1, 2, 3, 4, 5]\n",
-    "l[4]\n",
-    "l[-5]"
+    "find_max_product([1, 6, 2, 3, 4, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_pairs(pair1, pair2):\n",
+    "    if (pair1[0] ==  pair2[0] and pair1[1] == pair2[1]) or (pair1[1] == pair2[0] and pair1[0] == pair2[1]):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "def test1(func):\n",
+    "    nums = [1, 6, 2, 3, 4, 2]\n",
+    "    pair = func(nums)\n",
+    "    try:\n",
+    "        assert check_pairs(pair, [6, 2])\n",
+    "        print('Test Passed')\n",
+    "    except Exception:\n",
+    "        print('Test Not Passed')\n",
+    "    \n",
+    "\n",
+    "def test2(func):\n",
+    "    nums = [32, 1, 7, 1, 10, 2, 16]\n",
+    "    pair = func(nums)\n",
+    "    try:\n",
+    "        assert check_pairs(pair, [32, 1])\n",
+    "        print('Test Passed')\n",
+    "    except Exception:\n",
+    "        print('Test Not Passed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Passed\n",
+      "Test Passed\n"
+     ]
+    }
+   ],
+   "source": [
+    "test1(find_max_product)\n",
+    "test2(find_max_product)"
    ]
   },
   {
