--- a/Task4.ipynb
+++ b/Task4.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 339,
    "id": "7c0860d0-49f4-4ed3-a38b-7a5f951fb359",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 340,
    "id": "6f7e7066-fffb-444f-9cf2-7d71ac10c007",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
       "Test passed\n",
       "[[[0, 3, 6, 7], 7], [[0, 3, 7], 8]]\n",
       "Test passed\n",
-      "[[[0, 1, 4, 6, 7, 5], 5], [[0, 2, 5], 5]]\n",
+      "[[[0, 1, 4, 6, 7, 5], 5], [[0, 2, 5], 5], [[0, 3, 2, 5], 9]]\n",
       "Test passed\n"
      ]
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 342,
    "id": "fc8f4561-764c-4bc4-8a27-adadb10cc0cf",
    "metadata": {},
    "outputs": [],
@@ -286,7 +286,7 @@
     "            if output[i][-1]>min_path[-1]:\n",
     "                break\n",
     "            if len(output[i][0]) < len(min_path[0]):\n",
-    "                min_path = output[i][0]\n",
+    "                min_path = output[i]\n",
     "        # return pathes, weights\n",
     "        return min_path\n",
     "        \n",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 343,
    "id": "54f4509f-7e6b-492b-b074-86b3efe88760",
    "metadata": {},
    "outputs": [
@@ -310,10 +310,10 @@
     {
      "data": {
       "text/plain": [
-       "[0, 2, 5]"
+       "[[0, 2, 5], 5]"
       ]
      },
-     "execution_count": 336,
+     "execution_count": 343,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,6 +329,28 @@
     "          [0, 0, 0, 0, 0, 1, 1, 0]]\n",
     "    \n",
     "DFS(matrix, 0, 5, print_all=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 344,
+   "id": "5ab11d74-42ca-4965-a100-51ac2804932f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test passed\n",
+      "Test passed\n",
+      "Test passed\n"
+     ]
+    }
+   ],
+   "source": [
+    "test1(DFS)\n",
+    "test2(DFS)\n",
+    "test3(DFS)"
    ]
   },
   {
