--- a/Task1_Shnur.ipynb
+++ b/Task1_Shnur.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 80,
    "id": "e5927813-333e-443c-b719-3ac2cf091ab9",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,28 @@
     "    seq = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
     "    res = func(seq)\n",
     "    seq.sort(key=lambda x: x%5)\n",
-    "    print(seq, res)\n",
+    "    try:\n",
+    "        assert check_seq(seq, res)\n",
+    "        print('Test passed')\n",
+    "    except Exception:\n",
+    "        print('Test not passed')\n",
+    "\n",
+    "\n",
+    "def test2(func)->None:\n",
+    "    seq = [235, 152, 238, 31, 296, 133, 78, 142, 199, 76, 269, 100, 187, 242, 163, 70, 168, 293, 99, 228]\n",
+    "    res = func(seq)\n",
+    "    seq.sort(key=lambda x: x%5)\n",
+    "    try:\n",
+    "        assert check_seq(seq, res)\n",
+    "        print('Test passed')\n",
+    "    except Exception:\n",
+    "        print('Test not passed')\n",
+    "\n",
+    "\n",
+    "def test3(func)->None:\n",
+    "    seq = [55, 11, 49, 63, 66, 56, 93, 67, 87, 10, 21, 23, 68, 76, 50, 45, 92, 33, 83, 49]\n",
+    "    res = func(seq)\n",
+    "    seq.sort(key=lambda x: x%5)\n",
     "    try:\n",
     "        assert check_seq(seq, res)\n",
     "        print('Test passed')\n",
@@ -112,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 81,
    "id": "63fc3564-9b66-4a6b-a72f-30c4ff43295c",
    "metadata": {},
    "outputs": [
@@ -120,19 +141,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5, 10, 6, 1, 7, 2, 8, 3, 9, 4] [5, 10, 6, 1, 7, 2, 8, 3, 9, 4]\n",
+      "Test passed\n",
+      "Test passed\n",
       "Test passed\n"
      ]
     }
    ],
    "source": [
-    "test1(linear_sort)"
+    "test1(linear_sort)\n",
+    "test2(linear_sort)\n",
+    "test3(linear_sort)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "fe97d178-a58a-4e25-abaa-8bd39c6c2684",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[55, 11, 49, 63, 66, 56, 93, 67, 87, 10, 21, 23, 68, 76, 50, 45, 92, 33, 83, 49]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "arr = []\n",
+    "for i in range(0, 20):\n",
+    "    arr.append(random.randint(10, 100))\n",
+    "\n",
+    "print(arr)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe97d178-a58a-4e25-abaa-8bd39c6c2684",
+   "id": "f61d5744-1455-4656-bb0a-e6b9eb931fcb",
    "metadata": {},
    "outputs": [],
    "source": []
